@@ -520,10 +520,10 @@ PyMODINIT_FUNC initText(PyObject *module)
   PyModule_AddObject(text_module, "Text", (PyObject *)&PyGedaTextObjectType);
 }
 
-/*! \todo Finish function documentation!!!
- *  \brief
- *  \par Function Description
- *
+/*!
+ * \brief Retrieve PyGedaTextClass Python Structure
+ * \par Function Description
+ *  Returns a pointer to the above PyGedaTextObjectType structure.
  */
 PyTypeObject *PyGedaTextClass(void)
 {
