@@ -3,6 +3,8 @@
     * module/geda.c: Revise delete_objects to accept a list with either
       PyGedaObjects or GedaCapsuleObjects.
 
+    * module/objects/geda_py_text.c: Update function documentation.
+
     * src/libgedathon.c: Declare get_floating_object and retrieve_floating_object
       static. Remove "Geda" from Python Geda PyGeda???Object function documentation.
 
